// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MTimepicker should render correctly 1`] = `
<div class="m-timepicker">
    <div class="m-input-style m--has-value m--is-tag-default" style="width:undefined;">
        <div class="m-input-style__body">
            <div class="m-input-style__body__left">
                <input id="mTimepicker-uuid" type="text" aria-haspopup="true" aria-controls="mTimepicker-uuid-controls" placeholder="hh mm" value="2:00 PM"> </div>
            <div class="m-input-style__body__right">
                <m-icon-button icon-name="clock" button-size="22px" aria-controls="mTimepicker-uuid"><span class="m-i18n">Open time selector</span> </m-icon-button>
            </div>
        </div>
    </div>
    <div class="m-validation-message">
        <m-accordion-transition transition="true"></m-accordion-transition>
    </div>
    <div class="m-popup">
        <div class="m-popper">
            <DIV class="v-portal" style="display:none;"></DIV>
        </div>
    </div>
</div>
`;

exports[`MTimepicker should render correctly min/max time 1`] = `
<div class="m-timepicker">
    <div class="m-input-style m--has-value m--is-tag-default" style="width:undefined;">
        <div class="m-input-style__body">
            <div class="m-input-style__body__left">
                <input id="mTimepicker-uuid" type="text" aria-haspopup="true" aria-controls="mTimepicker-uuid-controls" placeholder="hh mm" value="7:00"> </div>
            <div class="m-input-style__body__right">
                <m-icon-button icon-name="clock" button-size="22px" aria-controls="mTimepicker-uuid"><span class="m-i18n">Open time selector</span> </m-icon-button>
            </div>
        </div>
    </div>
    <div class="m-validation-message">
        <m-accordion-transition transition="true"></m-accordion-transition>
    </div>
    <div class="m-popup">
        <div class="m-popper">
            <DIV class="v-portal" style="display:none;"></DIV>
        </div>
    </div>
</div>
`;

exports[`MTimepicker should render correctly when disabled is set 1`] = `
<div class="m-timepicker">
    <div class="m-input-style m--is-disabled m--has-value m--is-tag-default" style="width:undefined;">
        <div class="m-input-style__body">
            <div class="m-input-style__body__left">
                <input id="mTimepicker-uuid" type="text" aria-haspopup="true" aria-controls="mTimepicker-uuid-controls" disabled="disabled" placeholder="hh mm" value="2:00 PM"> </div>
            <div class="m-input-style__body__right">
                <m-icon-button icon-name="clock" disabled="disabled" button-size="22px" aria-controls="mTimepicker-uuid"><span class="m-i18n">Open time selector</span> </m-icon-button>
            </div>
            <svg aria-hidden="true" width="1em" height="1em" class="m-icon m-input-style__disabled-icon">
                <use xlink:href="#default" aria-hidden="true"></use>
            </svg>
        </div>
    </div>
    <div class="m-validation-message">
        <m-accordion-transition transition="true"></m-accordion-transition>
    </div>
    <div class="m-popup">
        <div class="m-popper">
            <DIV class="v-portal" style="display:none;"></DIV>
        </div>
    </div>
</div>
`;

exports[`MTimepicker should render correctly when error is set 1`] = `
<div class="m-timepicker">
    <div class="m-input-style m--has-error m--has-value m--is-tag-default" style="width:undefined;">
        <div class="m-input-style__body">
            <div class="m-input-style__body__left">
                <input id="mTimepicker-uuid" type="text" aria-haspopup="true" aria-controls="mTimepicker-uuid-controls" placeholder="hh mm" value="2:00 PM"> </div>
            <div class="m-input-style__body__right">
                <m-icon-button icon-name="clock" button-size="22px" aria-controls="mTimepicker-uuid"><span class="m-i18n">Open time selector</span> </m-icon-button>
            </div>
        </div>
    </div>
    <div class="m-validation-message">
        <m-accordion-transition transition="true">
            <div class="m-validation-message__wrap">
                <p class="m-validation-message__error">
                    <svg width="1em" height="1em" class="m-icon m-validation-message__error__icon">
                        <title>m-validation-message:title-error-icon</title>
                        <use xlink:href="#error" aria-hidden="true"></use>
                    </svg><span class="m-validation-message__text">Nostrud laboris quis velit voluptate aute elit elit non.</span></p>
            </div>
        </m-accordion-transition>
    </div>
    <div class="m-popup">
        <div class="m-popper">
            <DIV class="v-portal" style="display:none;"></DIV>
        </div>
    </div>
</div>
`;

exports[`MTimepicker should render correctly when valid is set 1`] = `
<div class="m-timepicker">
    <div class="m-input-style m--is-valid m--has-value m--is-tag-default" style="width:undefined;">
        <div class="m-input-style__body">
            <div class="m-input-style__body__left">
                <input id="mTimepicker-uuid" type="text" aria-haspopup="true" aria-controls="mTimepicker-uuid-controls" placeholder="hh mm" value="2:00 PM"> </div>
            <div class="m-input-style__body__right">
                <m-icon-button icon-name="clock" button-size="22px" aria-controls="mTimepicker-uuid"><span class="m-i18n">Open time selector</span> </m-icon-button>
            </div>
        </div>
    </div>
    <div class="m-validation-message">
        <m-accordion-transition transition="true">
            <div class="m-validation-message__wrap">
                <p class="m-validation-message__valid">
                    <svg width="1em" height="1em" class="m-icon m-validation-message__valid__icon">
                        <title>m-validation-message:title-valid-icon</title>
                        <use xlink:href="#check" aria-hidden="true"></use>
                    </svg> <span class="m-validation-message__text">Nostrud laboris quis velit voluptate aute elit elit non.</span></p>
            </div>
        </m-accordion-transition>
    </div>
    <div class="m-popup">
        <div class="m-popper">
            <DIV class="v-portal" style="display:none;"></DIV>
        </div>
    </div>
</div>
`;

exports[`MTimepicker should render correctly when waiting is set 1`] = `
<div class="m-timepicker">
    <div class="m-input-style m--is-waiting m--has-value m--is-tag-default" style="width:undefined;">
        <div class="m-input-style__body">
            <div class="m-input-style__body__left">
                <input id="mTimepicker-uuid" type="text" aria-haspopup="true" aria-controls="mTimepicker-uuid-controls" disabled="disabled" placeholder="hh mm" value="2:00 PM"> </div>
            <div class="m-input-style__body__right">
                <m-icon-button icon-name="clock" disabled="disabled" button-size="22px" aria-controls="mTimepicker-uuid"><span class="m-i18n">Open time selector</span> </m-icon-button>
            </div>
            <div class="m-spinner m-input-style__spinner">
                <div></div>
            </div>
        </div>
    </div>
    <div class="m-validation-message">
        <m-accordion-transition transition="true"></m-accordion-transition>
    </div>
    <div class="m-popup">
        <div class="m-popper">
            <DIV class="v-portal" style="display:none;"></DIV>
        </div>
    </div>
</div>
`;
